# python_examples

rsync/: .gitignore  README.md  pyproject.toml  rsync.py
rsync/tests/: hello_world.py  hello_world_t.py  test_rsync.py
